--- a/styles.css
+++ b/styles.css
@@ -109,8 +109,16 @@
     background: url(./imgs/darren-nunis-EEGQ5T62iTI-unsplash.jpg) no-repeat center center/cover;
 }
 .table{
-    background-color: rgb(222, 101, 178,0.5);
+    width: 100%;
 
+}
+
+.dltbtn{
+    background-color: red;
+}
+
+.editbtn{
+    background-color:  rgb(222, 101, 178);
 }
  @media only screen and (max-width: 600px){
     /* toggle button will show */
